emergency fix - reduce width of state labels sop they dont wrap

--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -10,14 +10,14 @@
   text-shadow: none;
 }
 .label-ticket {
-  width:31%;
+  width:29%;
   display: inline-block;
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 .label-missing {
-  width:31%;
+  width:29%;
   display: inline-block;
   background: none;
 }
